# rslidar_sdk

./: .gitmodules  CMakeLists.txt  README.md  README_CN.md
config/: airy.yaml  airy_ftrc.yaml
doc/howto/: 12_how_to_create_deb.md
launch/: run.launch  run.launch.py
node/: rslidar_sdk_node.cpp
src/manager/: node_manager.cpp  node_manager.hpp
src/source/: source.hpp  source_driver.hpp  source_packet_ros.hpp  source_pointcloud_ros.hpp
